<resources>
    <string name="app_name">Mémocktail</string>
    <string name="descriptionlobby">Pour apprendre à faire des cocktails savoureux!</string>
    <string name="welcomelobby">Bienvenue dans le\nmonde de Mocktail</string>
    <string name="jeu">Jouer</string>
    <string name="historique">Historique</string>
    <string name="descriptionducocktail">cocktaildescription</string>
    <string name="virgin_daiquiri">Virgin daiquiri</string>
    <string name="virgin_mojito">Virgin mojito</string>
    <string name="virgin_pina_colada">Virgin pina colada</string>
    <string name="difficulty">Difficulté</string>
    <string name="gameMode">Mode de Jeu</string>
    <string name="easy">Facile</string>
    <string name="hard">Difficile</string>
    <string name="classic">Classique</string>
    <string name="atc">Contre La Montre</string>
    <string name="played_games">Parties Jouées</string>
    <string name="victories">Victoires</string>
    <string name="cocktail">Cocktail</string>
    <string name="menu">menu</string>
    <string name="a_propos_title">À propos</string>
    <string name="a_propos">
        Rejoins le monde de Mocktail et apprends à réaliser des virgin cocktails en
        jouant au jeu du mémory.\n\n\n\n\n\n\n
        Réalisé par : \nFlorent YVON\nMickaël MENEUX\nJulien RAILLARD
    </string>
    <string-array name="volumes">
        <item>Musique de fond</item>
        <item>Effets sonores</item>
    </string-array>
</resources>
