<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".game.GameSettingsActivity">

    <Spinner
        android:id="@+id/spinnerCocktailToPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCocktailToPlay"
        android:popupBackground="#69c6ef"/>

    <Spinner
        android:id="@+id/spinnerGameModeToPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewGameModeToPlay"
        android:popupBackground="#69c6ef" />

    <Spinner
        android:id="@+id/spinnerDifficultyToPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="7dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:spinnerMode="dropdown"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDifficultyToPlay"
        android:popupBackground="#69c6ef" />

    <TextView
        android:id="@+id/textViewCocktailToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/cocktail"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewGameModeToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/gameMode"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCocktailToPlay" />

    <TextView
        android:id="@+id/textViewDifficultyToPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/bubblegum_sans"
        android:text="@string/difficulty"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGameModeToPlay" />

    <ImageView
        android:id="@+id/imageViewCocktailToPlay"
        android:layout_width="161dp"
        android:layout_height="184dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerDifficultyToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/spinnerDifficultyToPlay"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764"
        app:srcCompat="@drawable/icon" />

    <ImageButton
        android:id="@+id/playButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="164dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="#0000"
        app:srcCompat="@drawable/play" />

</android.support.constraint.ConstraintLayout>